tests/reference/asr-test_assign4-a2136e0.stderr
semantic error: Assigning integer to float is not supported
 --> tests/errors/test_assign4.py:7:9
  |
7 |     f = x
  |         ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
